      without regard to previous entries.
  e - Added new symbol JOB_EXEC_OVERLIMIT. When a job exceeds a limit (i.e. walltime) the
      job will fail with the JOB_EXEC_OVERLIMIT value and
      also produce an abort case for mailing purposes. Previous to this change
      a job exceeding a limit returned 0 on success and no mail
      was sent to the user if requested on abort.


2.5.5
  b - change so gpus get written back to nodes file
  e - make it so that even if an array request has multiple consecutive '%' the slot 
      limit will be set correctly
  e - change so blcr checkpoint jobs can restart on different node. Use
      configure --enable-blcr to allow.
  b - remove the use of a GNU specific function, and fix an error for solaris builds
  b - remove the $PBS_GPUFILE when job is done on mom
  b - fix a race condition when issuing a qrerun followed by a qdel that caused 
      the job to be queued instead of deleted sometimes.
  e - Implemented Bugzilla Bug 110. If a host in the nodes file cannot be resolved
      at startup the server will try once every 5 minutes until the node 
      will resolve and it will add it to the nodes list.
  e - Added a "create" method to pbs_server init.d script so a serverdb file
      can be created if it does not exist at startup time. This is an enhancement
      in reference to Bugzilla bug 90.
  e - Add code to verify the group list as well when VALIDATEGROUPS is set in torque.cfg
  b - Fixed a problem in parse_node_token where the local static variable pt would be advanced
      past the end of the line input if there is no newline character at the end of the nodes 
      file.

2.5.4
  f - added the ability to track gpus. Users set gpus=X in the nodes file for
      relevant node, and then request gpus in the nodes request: 
      -l nodes=X[:ppn=Y][:gpus=Z]. The gpus appear in $PBS_GPUFILE, a new 
      environment variable, in the form: <hostname>-gpu<index> and in a 
      new job attribute exec_gpus: 